[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rly"
version = "0.1.0"
description = "Command memory and workflow orchestrator — a terminal companion"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "jinja2>=3.1.0",
    "pywebview>=5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5.0",
]